--- a/src/style.css
+++ b/src/style.css
@@ -631,6 +631,20 @@ video {
   }
 }
 
+.card{
+  color: #4a5568;
+  text-align: center;
+  background-color: #fff;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  margin: 0.5rem;
+  height: 16rem;
+  display: flex;
+  border-radius: 0.5rem
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
