--- a/tailwind.css
+++ b/tailwind.css
@@ -2,4 +2,8 @@
 
 @tailwind components;
 
+.card{
+  @apply text-gray-700 text-center bg-white px-4 py-2 m-2 h-64 flex rounded-lg 
+}
+
 @tailwind utilities;
